k8s/apps/web4/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web4
  namespace: cwx
spec:
  selector:
    app: web4
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
